--- a/SongSurf/chrome-extension/popup.html
+++ b/SongSurf/chrome-extension/popup.html
@@ -181,7 +181,7 @@
   <div class="container">
     <div class="header">
       <img src="icons/Song-logo.png" alt="SongSurf" class="logo">
-      <p>Téléchargement YouTube Music</p>
+      <p>Téléchargement YT Music</p>
     </div>
     
     <div class="status">
@@ -198,7 +198,7 @@
       <strong>💡 Comment utiliser :</strong>
       <div class="info-steps">
         1. Lancez le serveur Python<br>
-        2. Allez sur YouTube Music<br>
+        2. Allez sur YT Music<br>
         3. Cliquez sur le widget SongSurf<br>
         4. Téléchargez votre musique !
       </div>
